--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<p> Restaurante <a href="login.html"></a></p>
 	</header>
 	<ul>
-		<li> <a href="menu.html">Inicio</a> </li>
+		<li> <a href="index.html">Inicio</a> </li>
 		<li> <a href="comidas.html">Comidas</a> </li>
 		<li> <a href="postres.html">Postres</a> </li>
 		<li> <a href="bebidas.html">Bebidas</a> </li>
@@ -24,12 +24,12 @@
 		<li> <a href="#contactos">Contactos</a> </li>
 	</ul>
 	<div>
-		<a href="menu.html#comidas"><img src="comidas.jpg"></a>
-        <a href="menu.html#postres"><img src="postres.jpg"></a>
-		<a href="menu.html#bebidas"><img src="bebidas.jpg"></a>
-		<a href="menu.html#tragos"><img src="tragos.jpg"></a>
-		<a href="menu.html#pedidos"><img src="pedidos.jpg"></a>
-		<a href="menu.html#contactos"><img src="contactos.jpg"></a>
+		<a href="index.html#comidas"><img src="comidas.jpg"></a>
+        <a href="index.html#postres"><img src="postres.jpg"></a>
+		<a href="index.html#bebidas"><img src="bebidas.jpg"></a>
+		<a href="index.html#tragos"><img src="tragos.jpg"></a>
+		<a href="index.html#pedidos"><img src="pedidos.jpg"></a>
+		<a href="index.html#contactos"><img src="contactos.jpg"></a>
 	</div>
 	<fieldset>
 		<div class="1">
