--- a/pedidos2.html
+++ b/pedidos2.html
@@ -13,14 +13,14 @@
 		<p> Restaurante <a href="login.html"></a></p>
 	</header>
 	<ul>
-		<li> <a href="menu.html">Inicio</a> </li>
+		<li> <a href="index.html">Inicio</a> </li>
 		<li> <a href="comidas.html">Comidas</a> </li>
 		<li> <a href="postres.html">Postres</a> </li>
 		<li> <a href="bebidas.html">Bebidas</a> </li>
 		<li> <a href="tragos.html">Tragos</a> </li>
 		<li> <a href="pedidos.html">Pedidos</a> </li>
 		<li> <a href="reserva.html">Reservas</a> </li>
-		<li> <a href="menu.html#contactos">Contactos</a> </li>
+		<li> <a href="index.html#contactos">Contactos</a> </li>
 	</ul>
     <fieldset>
     	<form>
@@ -34,7 +34,7 @@
         	Tragos: <input type="text" id="tr" disabled><br><br>
         	Observaciones: <br><textarea cols="60" id="o" rows="5" disabled></textarea><br><br>
         	<input type="button" class="button" value="Ver" onclick="Pedidos()">
-			<a href="menu.html"><input type="button" class="button" value="Atrás"></a>
+			<a href="index.html"><input type="button" class="button" value="Atrás"></a>
 		</form>
 	</fieldset>
 	<footer><p> Alumnos: Salgado Yohana, Suarez Thiago y Torres Marcos. </p></footer>
