--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@
 		<p> Restaurante <a href="login.html"></a></p>
 	</header>
 	<ul>
-		<li> <a href="menu.html">Inicio</a> </li>
+		<li> <a href="index.html">Inicio</a> </li>
 		<li> <a href="comidas.html">Comidas</a> </li>
 		<li> <a href="postres.html">Postres</a> </li>
 		<li> <a href="bebidas.html">Bebidas</a> </li>
@@ -32,7 +32,7 @@
 			Consulta: <br>
 			<textarea cols="55" rows="10" id="c" disabled></textarea> <br>
 			<input type="button" class="button" value="Ver" onclick="return VerContacto()">
-			<a href="menu.html"><input type="button" class="button" value="Atrás"></a>
+			<a href="index.html"><input type="button" class="button" value="Atrás"></a>
 		</form>
 	</fieldset>
 	<footer> <p> Alumnos: Salgado Yohana, Suarez Thiago y Torres Marcos. </p></footer>
