--- a/reserva.html
+++ b/reserva.html
@@ -13,14 +13,14 @@
 		<p> Restaurante <a href="login.html"></a></p>
 	</header>
 	<ul>
-		<li> <a href="menu.html">Inicio</a> </li>
+		<li> <a href="index.html">Inicio</a> </li>
 		<li> <a href="comidas.html">Comidas</a> </li>
 		<li> <a href="postres.html">Postres</a> </li>
 		<li> <a href="bebidas.html">Bebidas</a> </li>
 		<li> <a href="tragos.html">Tragos</a> </li>
 		<li> <a href="pedidos.html">Pedidos</a> </li>
 		<li> <a href="reserva.html">Reservas</a> </li>
-		<li> <a href="menu.html#contactos">Contactos</a> </li>
+		<li> <a href="index.html#contactos">Contactos</a> </li>
 	</ul>
 	<fieldset>
         <form name="reser" action="reserva2.html" method="post">
